---
source: crates/tribute-passes/src/native/rc_lowering.rs
expression: result
---
core.module @test {
  clif.func {sym_name = "f", type = clif.func_sig<(core.ptr) -> core.nil>} {
    ^bb0(%0: core.ptr):
      %1 = clif.iconst {value = 0} : core.ptr
      %2 = clif.icmp %0, %1 {cond = "eq"} : core.i8
      clif.brif %2 [^bb2, ^bb1]

    ^bb1:
      %3 = clif.iconst {value = 8} : core.i64
      %4 = clif.isub %0, %3 : core.ptr
      %5 = clif.iconst {value = 1} : core.i32
      %6 = clif.atomic_rmw %4, %5 {bin_op = "add", offset = 0} : core.i32
      clif.jump [^bb2]

    ^bb2:
      %7 = clif.iconst {value = 0} : core.ptr
      %8 = clif.icmp %0, %7 {cond = "eq"} : core.i8
      clif.brif %8 [^bb5, ^bb3]

    ^bb3:
      %9 = clif.iconst {value = 8} : core.i64
      %10 = clif.isub %0, %9 : core.ptr
      %11 = clif.iconst {value = 1} : core.i32
      %12 = clif.atomic_rmw %10, %11 {bin_op = "sub", offset = 0} : core.i32
      %13 = clif.icmp %12, %11 {cond = "eq"} : core.i8
      clif.brif %13 [^bb4, ^bb5]

    ^bb4:
      %14 = clif.iconst {value = 12} : core.i64
      %15 = clif.call %0, %14 {callee = @__tribute_deep_release} : core.nil
      clif.jump [^bb5]

    ^bb5:
      clif.return
  }
}
